Fixed bug failed drawing circle on safari

--- a/src/styles/module/navigation.styl
+++ b/src/styles/module/navigation.styl
@@ -35,7 +35,6 @@
         background-color #fff
       dd
         color #fff
-        font-weight bold
 
     &.active
       dt
@@ -43,7 +42,6 @@
         background-color #0a0
       dd
         color #fff
-        font-weight bold
 
   .wheel
     position absolute
