--- a/src/styles/module/skillcloud.styl
+++ b/src/styles/module/skillcloud.styl
@@ -14,7 +14,6 @@
       cursor pointer
 
       circle
-        r 5
         transition r 0.39s linear, opacity 0.39s linear
 
       text
@@ -22,14 +21,9 @@
 
       &.active
         circle
-          r 100
           opacity 0.2
         text
           text-anchor middle
-
-        &.grandchild
-          circle
-            r 60
 
       &.selected
         text
@@ -37,7 +31,6 @@
 
       &.root
         circle
-          r 100
           opacity 0.3
 
     line
